--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             <div class="nav_menu">
                 <ul>
                     <li><a href="">About Us</a></li>
-                    <li><a href="">Explore</a></li>
+                    <li><a href="">Host a Home</a></li>
                     <li><a href="">Sign Up</a></li>
                     <li><a href="">Login In</a></li>
                 </ul>    
             </div>
         </div>
     </header>
+    <img class="main_image" src="/img/South Glenmore Park, Calgary, Canada.jpg" alt="South Glenmore Park, Calgary, Canada">
 </body>
