--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
             </div>
         </div>
     </header>
-    <img class="main_image" src="/img/South Glenmore Park, Calgary, Canada.jpg" alt="South Glenmore Park, Calgary, Canada">
+    <div class="main_image">
+        <p>South Glenmore Park, Calgary</p>
+    </div>
 </body>
