--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
             </div>
         </div>
     </header>
-    <div class="main_image">
-        <p>South Glenmore Park, Calgary</p>
-    </div>
+    <article class="main_picture">
+        <img src="/img/South Glenmore Park.jpg" width="100%" alt="South Glenmore Park, Calgary, Canada">
+        <p>South Glenmore Park, Calgary, Canada</p>
+        <div class="booking_window">
+            
+        </div>
+    </article>
+
+
+
+
+
 </body>
