--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <img src="/img/South Glenmore Park.jpg" width="100%" alt="South Glenmore Park, Calgary, Canada">
         <p>South Glenmore Park, Calgary, Canada</p>
         <div class="booking_window">
-            
+            <h1>Book unique places to stay in your favourite city.</h1>
+            <label class=""></label>
         </div>
     </article>
 
