--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="nav_container">
             <div class="logo">
-                <img src="/img/enjoybnb logo.png" alt="EnjoyBnB Logo">
+                <img src="/img/EnjoyB&B Logo.png" alt="EnjoyBnB Logo">
             </div>
             <div class="nav_menu">
                 <ul>
